--- a/app.json
+++ b/app.json
@@ -21,7 +21,7 @@
   "formation": {
         "worker": {
             "quantity": 1,
-            "size": "free"
+            "size": "echo"
         }
     },
       "stack": "heroku-20"
